# mast-meta-observer

./: README.md  benchmark.py  pyproject.toml  run.py
dashboard/: app.js  index.html  styles.css
src/mast_meta_observer/: checkpoints.py  config.py  models.py  observer.py  paths.py  runner.py  signatures.py  trace_store.py
tests/: test_signature.py
